solved responsive layout issues

--- a/style.scss
+++ b/style.scss
@@ -52,13 +52,11 @@
     .nav-links {
         
         /* background-color: blue; */
-        width: 100%;
-        list-style: none;
-        /* padding-right: 125px; */
-        justify-content: space-evenly;
+        /* width: 100%; */
+        list-style: none;             
         margin-top: 40px;
         display: flex;
-        /* flex-direction: column; */
+        flex-direction: column;
         text-align: center;
         display: none;
         
@@ -137,7 +135,7 @@
         font-size: 1.2rem;
         text-align: center;
         /* padding: 175px 25px 50px 50px; */
-        padding: 50px 50px 50px 50px;        
+        padding: 20px 50px 50px 50px;        
     }
 }
 
@@ -152,7 +150,7 @@
     max-width: 100%;
 
     img {
-        padding: 10px 50px 50px 50px;
+        padding: 0 20px 20px 20px;
         max-width: 100%;
     }
 }
@@ -167,14 +165,31 @@
         display: none;
     }
     .nav {
-        flex-direction: row;
-        display: inline;        
+        /* height: 100%; */
+        display: flex;
+        flex-direction: row;        
+        justify-content: space-between;
 
         .nav-links {
-            display: inline;            
+            margin: auto;
+            /* background-color: red; */         
+            display: inline;         
         }
         .some-icons {            
             display: inline;            
+        }
+    }
+
+    .text-content {
+        p {
+            padding: 50px 50px 10px 50px;
+        }
+    }
+
+    .img-content {
+        img {
+            padding: 50px;
+            max-width: 100%;
         }
     }
 }
@@ -196,9 +211,9 @@
         p {
             /* background-color: red; */
             @include f-light;
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             /* text-align: center; */
-            padding: 175px 25px 50px 50px;
+            padding: 140px 25px 50px 150px;
             /* padding: 50px 50px 50px 50px; */            
         }        
     }
@@ -206,11 +221,7 @@
         grid-area: 2/2/3/3;
         /* grid-area: 3/1/4/2; */
         /*background: green;*/
-        max-width: 100%;
-    
-        img {
-            padding: 50px;
-            max-width: 100%;
-        }
+        max-width: 100%;   
+        
     }
 }
